feat(bugs): Add basic structure for siblings
